--- a/autoexam-app/docker-compose.gpu.yml
+++ b/autoexam-app/docker-compose.gpu.yml
@@ -24,7 +24,7 @@ services:
       - ./data:/app/data
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "python", "-c", "import requests; requests.get('http://localhost:8000/api/history', timeout=5)"]
+      test: ["CMD", "python3", "-c", "import urllib.request; urllib.request.urlopen('http://localhost:8000/api/history', timeout=5)"]
       interval: 30s
       timeout: 10s
       retries: 3
